tests/scripts/errors/runtime/throw_string.cdo
THROW "this is a thrown error";
